src/auryn/snapshots/auryn__auryn__tokenizer__tests__handles_invalid_string_literal.snap
---
source: src/auryn/tokenizer.rs
expression: "tokenize(\"\\\"\")"
---
[
    Token {
        kind: StringLiteral,
        text: "\"",
    },
]
