src/auryn/snapshots/auryn__auryn__tokenizer__tests__parser-3.snap
---
source: src/auryn/tokenizer.rs
expression: "tokenize(\" \\n \\t\\n \")"
---
[
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Newline,
        text: "\n",
    },
    Token {
        kind: Whitespace,
        text: " \t",
    },
    Token {
        kind: Newline,
        text: "\n",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
]
