src/auryn/snapshots/auryn__auryn__tokenizer__tests__parser-4.snap
---
source: src/auryn/tokenizer.rs
expression: "tokenize(\"loop let some_text = if true { 2 } else { break }\")"
---
[
    Token {
        kind: KeywordLoop,
        text: "loop",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: KeywordLet,
        text: "let",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Identifier,
        text: "some_text",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Equal,
        text: "=",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: KeywordIf,
        text: "if",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Identifier,
        text: "true",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: BraceOpen,
        text: "{",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: NumberLiteral,
        text: "2",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: BraceClose,
        text: "}",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Identifier,
        text: "else",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: BraceOpen,
        text: "{",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: KeywordBreak,
        text: "break",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: BraceClose,
        text: "}",
    },
]
