src/auryn/snapshots/auryn__auryn__tokenizer__tests__parser.snap
---
source: src/auryn/tokenizer.rs
expression: "tokenize(\" 1 +4  \\n\")"
---
[
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Number,
        text: "1",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Plus,
        text: "+",
    },
    Token {
        kind: Number,
        text: "4",
    },
    Token {
        kind: Whitespace,
        text: "  ",
    },
    Token {
        kind: Newline,
        text: "\n",
    },
]
