src/auryn/snapshots/auryn__auryn__tokenizer__tests__rejects_unicode_whitespace.snap
---
source: src/auryn/tokenizer.rs
expression: "tokenize(\"\\u{a0}\")"
---
[
    Token {
        kind: Error,
        text: "\u{a0}",
    },
]
