src/auryn/snapshots/auryn__auryn__tokenizer__tests__tokenizer-4.snap
---
source: src/auryn/tokenizer.rs
expression: "tokenize(\"loop while let some_text = if true { false } else { break continue return } fn [foo.bar] struct\")"
---
[
    Token {
        kind: KeywordLoop,
        text: "loop",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: KeywordWhile,
        text: "while",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: KeywordLet,
        text: "let",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Identifier,
        text: "some_text",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: Equal,
        text: "=",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: KeywordIf,
        text: "if",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: KeywordTrue,
        text: "true",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: BraceOpen,
        text: "{",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: KeywordFalse,
        text: "false",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: BraceClose,
        text: "}",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: KeywordElse,
        text: "else",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: BraceOpen,
        text: "{",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: KeywordBreak,
        text: "break",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: KeywordContinue,
        text: "continue",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: KeywordReturn,
        text: "return",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: BraceClose,
        text: "}",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: KeywordFn,
        text: "fn",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: BracketOpen,
        text: "[",
    },
    Token {
        kind: Identifier,
        text: "foo",
    },
    Token {
        kind: Dot,
        text: ".",
    },
    Token {
        kind: Identifier,
        text: "bar",
    },
    Token {
        kind: BracketClose,
        text: "]",
    },
    Token {
        kind: Whitespace,
        text: " ",
    },
    Token {
        kind: KeywordStruct,
        text: "struct",
    },
]
